--- a/SparkPlugins/Application/Resources/English.lproj/Help/Release.html
+++ b/SparkPlugins/Application/Resources/English.lproj/Help/Release.html
@@ -22,6 +22,13 @@
  	</table>
  	<hr />
  	<div style="margin: 20px; margin-bottom: 32px;">
+ 	<span class="chapter">Version 2.1</span>
+ 			<ul class="answer">
+ 				<li>Update for Spark 2.1.</li>
+ 				<li>Add action "Launch or Quit" that launch an application if not running and quit it else.</li>
+ 			</ul>
+ 	</div>
+ 	<div style="margin: 20px; margin-bottom: 32px;">
  	<span class="chapter">Version 2.0</span>
  			<ul class="answer">
  				<li>Update for SparkKit 2.0.</li>
