--- a/SparkPlugins/Application/Resources/French.lproj/Help/Release.html
+++ b/SparkPlugins/Application/Resources/French.lproj/Help/Release.html
@@ -22,6 +22,13 @@
  	</table>
  	<hr />
  	<div style="margin: 20px; margin-bottom: 32px;">
+ 	<span class="chapter">Version 2.1</span>
+ 			<ul class="answer">
+ 				<li>Mise à jour pour Spark 2.1.</li>
+ 				<li>Ajout de "Démarrer/Quitter" qui lance l'application si elle est arrêtée ou la quitte si elle tourne.</li>
+ 			</ul>
+ 	</div>
+ 	<div style="margin: 20px; margin-bottom: 32px;">
  	<span class="chapter">Version 2.0</span>
  			<ul class="answer">
  				<li>Mise à jour pour SparkKit 2.0.</li>
