Rewrite System Plugin. Update iTunes.

--- a/SparkPlugins/System/Resources/English.lproj/SystemActionHelp.html
+++ b/SparkPlugins/System/Resources/English.lproj/SystemActionHelp.html
@@ -5,47 +5,53 @@
   <title>Spark Power Action Help</title>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
   <style type="text/css">
-  	@import "Help/help.css";
+   @import "Help/help.css";
   </style>
  </head>
  <body>
- 	<table style="margin: 20px; width: 95%" cellspacing="0" cellpadding="0">
- 		<tr>
- 			<td>
- 				<img src="Help/Icon.png" alt="" style="vertical-align: middle;" />
- 			</td>
- 			<td style="text-align: center; width: 90%">
- 				<h1>Spark Power<br />Action</h1>
- 			</td>
- 		</tr>
- 	</table>
- 	<hr />
- 	<div style="margin: 20px; margin-bottom: 32px;">
- 	<span class="chapter">What is a Power Action?</span>
- 			<p class="answer">A <strong>"Power Action"</strong> is a simple key with Action:
- 				<ul style="font-size: 13px">
- 					<li>Log Out…</li>
- 					<li>Fast Log Out… (switch to login window)</li>
- 					<li>Sleep</li>
- 					<li>Reboot</li>
- 					<li>Shutdown</li>
- 				</ul>
- 			</p>
- 	</div>
- 	<div style="margin: 20px;">
- 	<span class="chapter">How to create a Power Action?</span>
- 		<div style="float: right; margin: 12px">
- 				<img src="Help/Power.jp2" alt="" style="margin: auto; border: 1px solid #c0c0c0" />
- 		</div>
- 			<p class="answer">Creating a Power Action is pretty simple. You just select the Action you want to execute on the Action Menu and that's all.</p>
- 			<p class="answer"><img src="Help/warning.tiff" alt="" style="vertical-align: middle" /> Be carful with those keys. Only the logout key will ask you to confirm the Action when it is executed.</p>
- 			<br clear="all"/>
- 	</div>
- 	<a href="Help/Release.html" style="font-size: 11px">Release Notes</a>
- 	<hr />
-	<div class="copyright" style="margin-top: 20px; text-align: center">
-		Copyright © 2004 Shadow Lab.<br />
-		<a href="mailto:&#106;&#100;&#100;&#117;&#112;&#97;&#115;&#64;&#121;&#97;&#104;&#111;&#111;&#46;&#102;&#114;">Jean-Daniel Dupas</a><br />
-	</div>
+  <table style="margin: 20px; width: 95%" cellspacing="0" cellpadding="0">
+   <tr>
+    <td>
+     <img src="Help/Icon.png" alt="" style="vertical-align: middle;" />
+    </td>
+    <td style="text-align: center; width: 90%">
+     <h1>Spark System<br />Action</h1>
+    </td>
+   </tr>
+  </table>
+  <hr />
+  <div style="margin: 20px; margin-bottom: 32px;">
+  <span class="chapter">What is a System Action?</span>
+    <p class="answer" >A <strong>"System Action"</strong> allows you to execute the following actions:
+     <ul style="font-size: 13px">
+      <li>Log Out…</li>
+      <li>Fast Log Out… (switch to login window)</li>
+      <li>--------</li>
+      <li>Sleep</li>
+      <li>Reboot</li>
+      <li>Shutdown</li>
+      <li>--------</li>
+      <li>Switch grayscale.</li>
+      <li>Switch black/white.</li>
+      <li>--------</li>
+      <li>Launch Screen Saver (Mac OS X.4 only)</li>
+     </ul>
+    </p>
+  </div>
+  <div style="margin: 20px;">
+  <span class="chapter">How to create a System Action?</span>
+    <p class="answer">To create a «System Action» you just have to select the action you want to execute in the Action Menu.</p>
+    <div style="margin: 12px; text-align: center">
+     <img src="Help/Screenshot.png" alt="" style="margin: auto; border: 1px solid #c0c0c0" />
+    </div>
+  </div>
+  <a href="Help/Release.html" style="font-size: 11px">Release Notes</a>
+  <hr />
+ <div class="copyright" style="text-align: center;">
+  Copyright © Shadow Lab. 2004 - 2006.
+  <p style="margin-top: 4px">
+  <a href="mailto:&#99;&#111;&#110;&#116;&#97;&#99;&#116;&#64;&#115;&#104;&#97;&#100;&#111;&#119;&#108;&#97;&#98;&#46;&#111;&#114;&#103;">Black Moon Team</a>
+  </p>
+ </div>
  </body>
 </html>
