--- a/SparkPlugins/System/Resources/English.lproj/Help/Release.html
+++ b/SparkPlugins/System/Resources/English.lproj/Help/Release.html
@@ -5,40 +5,50 @@
   <title>Release Notes Power Plugin</title>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
   <style type="text/css">
-  	@import "help.css";
+   @import "help.css";
   </style>
  </head>
  <body>
- 	 	<table style="margin: 20px; width: 95%" cellspacing="0" cellpadding="0">
- 		<tr>
- 			<td>
- 				<img src="Icon.png" alt="" style="vertical-align: middle;" />
- 			</td>
- 			<td style="text-align: center; width: 90%">
- 				<h1>Spark Power<br />Plugin<br />
- 				<span style="font-size: 20px; font-style: italic">Version 2.0</span></h1>
- 			</td>
- 		</tr>
- 	</table>
- 	<hr />
- 	<div style="margin: 20px; margin-bottom: 32px;">
- 	<span class="chapter">Version 2.0</span>
- 			<ul class="answer">
+    <table style="margin: 20px; width: 95%" cellspacing="0" cellpadding="0">
+   <tr>
+    <td>
+     <img src="Icon.png" alt="" style="vertical-align: middle;" />
+    </td>
+    <td style="text-align: center; width: 90%">
+     <h1>Spark System<br />Plugin<br />
+     <span style="font-size: 20px; font-style: italic">Version 3.0</span></h1>
+    </td>
+   </tr>
+  </table>
+  <hr />
+  <div style="margin: 20px; margin-bottom: 32px;">
+  <span class="chapter">Version 3.0</span>
+    <ul class="answer">
+     <li>Change name from "Power" to "System" Action.</li> 
+     <li>Add «Screen Saver» (Mac OS X.4 and later).</li>
+     <li>Improve Logout, Restart, Shutdown support.</li>
+     <li>Add «Switch Grayscale» and «Switch Black/White».</li>
+     <li>Redesing UI for Spark 3.0</li>
+    </ul>
+  </div>
+  <div style="margin: 20px; margin-bottom: 32px;">
+  <span class="chapter">Version 2.0</span>
+    <ul class="answer">
      <li>Add «Fast Logout» action.</li> 
- 				<li>Update for SparkKit 2.0.</li>
- 			</ul>
- 	</div>
- 	<div style="margin: 20px; margin-bottom: 32px;">
- 	<span class="chapter">Version 1.0.1</span>
- 			<ul class="answer">
- 				<li>Update for SparkKit 1.1.</li>
- 			</ul>
- 	</div>
- 	<div style="margin: 20px; margin-bottom: 32px;">
- 	<span class="chapter">Version 1.0</span>
- 			<ul class="answer">
- 				<li>First release.</li>
- 			</ul>
- 	</div>
+     <li>Update for SparkKit 2.0.</li>
+    </ul>
+  </div>
+  <div style="margin: 20px; margin-bottom: 32px;">
+  <span class="chapter">Version 1.0.1</span>
+    <ul class="answer">
+     <li>Update for SparkKit 1.1.</li>
+    </ul>
+  </div>
+  <div style="margin: 20px; margin-bottom: 32px;">
+  <span class="chapter">Version 1.0</span>
+    <ul class="answer">
+     <li>First release.</li>
+    </ul>
+  </div>
  </body>
  </html>
