Cleanup images and start to implements built-in plugin

--- a/SparkPlugins/System/Resources/English.lproj/SystemActionHelp.html
+++ b/SparkPlugins/System/Resources/English.lproj/SystemActionHelp.html
@@ -48,9 +48,9 @@
   <a href="Help/Release.html" style="font-size: 11px">Release Notes</a>
   <hr />
  <div class="copyright" style="text-align: center;">
-  Copyright © Shadow Lab. 2004 - 2006.
+  Copyright © 2004 - 2006, Shadow Lab.
   <p style="margin-top: 4px">
-  <a href="mailto:&#99;&#111;&#110;&#116;&#97;&#99;&#116;&#64;&#115;&#104;&#97;&#100;&#111;&#119;&#108;&#97;&#98;&#46;&#111;&#114;&#103;">Black Moon Team</a>
+  <a href="mailto:&#115;&#117;&#112;&#112;&#111;&#114;&#116;&#64;&#115;&#104;&#97;&#100;&#111;&#119;&#108;&#97;&#98;&#46;&#111;&#114;&#103;">Black Moon Team</a>
   </p>
  </div>
  </body>
