--- a/SparkPlugins/System/Resources/English.lproj/Help/Release.html
+++ b/SparkPlugins/System/Resources/English.lproj/Help/Release.html
@@ -50,5 +50,12 @@
      <li>First release.</li>
     </ul>
   </div>
+   <hr />
+ <div class="copyright" style="text-align: center;">
+  Copyright © 2004 - 2006, Shadow Lab.
+  <p style="margin-top: 4px">
+  <a href="mailto:&#115;&#117;&#112;&#112;&#111;&#114;&#116;&#64;&#115;&#104;&#97;&#100;&#111;&#119;&#108;&#97;&#98;&#46;&#111;&#114;&#103;">Black Moon Team</a>
+  </p>
+ </div>
  </body>
  </html>
