Update System Help. Update plugins to not save icon if useless

--- a/SparkPlugins/System/Resources/English.lproj/Help/history.html
+++ b/SparkPlugins/System/Resources/English.lproj/Help/history.html
@@ -15,18 +15,23 @@
      <img src="Icon.png" alt="" style="vertical-align: middle;" />
     </td>
     <td style="text-align: center; width: 90%">
-     <h1>Spark System<br />Plugin<br />
-     <span style="font-size: 20px; font-style: italic">Version 3.0</span></h1>
+     <h1>Spark System<br />Action<br /></h1>
     </td>
    </tr>
   </table>
-  <hr />
-  <div style="margin: 20px; margin-bottom: 32px;">
+  <ul id="hmenu">
+  	<li><a href="../SystemActionHelp.html">About System Action…</a></li>
+  	<li><a href="howto.html">Create a System Action</a></li>
+  	<li>Release Notes</li>
+  </ul>
+  <div style="margin: 20px; ">
   <span class="chapter">Version 3.0</span>
     <ul class="answer">
      <li>Change name from "Power" to "System" Action.</li> 
      <li>Add «Screen Saver» (Mac OS X.4 and later).</li>
      <li>Improve Logout, Restart, Shutdown support.</li>
+     <li>Add «Switch to…».</li>
+     <li>Add «Empty trash».</li>
      <li>Add «Switch Grayscale» and «Switch Black/White».</li>
      <li>Redesing UI for Spark 3.0</li>
     </ul>
@@ -54,7 +59,7 @@
  <div class="copyright" style="text-align: center;">
   Copyright © 2004 - 2006, Shadow Lab.
   <p style="margin-top: 4px">
-  <a href="mailto:&#115;&#117;&#112;&#112;&#111;&#114;&#116;&#64;&#115;&#104;&#97;&#100;&#111;&#119;&#108;&#97;&#98;&#46;&#111;&#114;&#103;">Black Moon Team</a>
+  <a href="mailto:support@shadowlab.org">Starligth Team</a>
   </p>
  </div>
  </body>
