--- a/SparkPlugins/System/Resources/English.lproj/Help/howto.html
+++ b/SparkPlugins/System/Resources/English.lproj/Help/howto.html
@@ -5,14 +5,14 @@
   <title>Spark Power Action Help</title>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
   <style type="text/css">
-   @import "Help/help.css";
+   @import "help.css";
   </style>
  </head>
  <body>
   <table style="margin: 20px; width: 95%" cellspacing="0" cellpadding="0">
    <tr>
     <td>
-     <img src="Help/Icon.png" alt="" style="vertical-align: middle;" />
+     <img src="Icon.png" alt="" style="vertical-align: middle;" />
     </td>
     <td style="text-align: center; width: 90%">
      <h1>Spark System<br />Action</h1>
@@ -20,29 +20,16 @@
    </tr>
   </table>
   <ul id="hmenu">
-  	<li>About System Action…</li>
-  	<li><a href="Help/howto.html">Create a System Action</a></li>
-  	<li><a href="Help/history.html">Release Notes</a></li>
+  	<li><a href="../SystemActionHelp.html">About System Action…</a></li>
+  	<li>Create a System Action</li>
+  	<li><a href="history.html">Release Notes</a></li>
   </ul>
   <div style="margin: 20px;">
-  <span class="chapter">What is a System Action?</span>
-    <p class="answer" >A <strong>"System Action"</strong> allows you to execute the following actions:
-     <ul style="font-size: 13px">
-      <li>Log Out…</li>
-      <li>Switch to… (Mac OS X.4 and later)</li>
-      <li>--------</li>
-      <li>Sleep</li>
-      <li>Reboot</li>
-      <li>Shutdown</li>
-      <li>--------</li>
-      <li>Empty Trash</li>
-      <li>--------</li>
-      <li>Switch grayscale.</li>
-      <li>Switch black/white.</li>
-      <li>--------</li>
-      <li>Launch Screen Saver (Mac OS X.4 and later)</li>
-     </ul>
-    </p>
+  <span class="chapter">How to create a System Action?</span>
+    <p class="answer">To create a «System Action» you just have to select the action you want to execute in the Action Menu.</p>
+    <div style="margin: 12px; text-align: center">
+     <img src="Screenshot.png" alt="" style="margin: auto; border: 1px solid #c0c0c0" />
+    </div>
   </div>
   <hr />
  <div class="copyright" style="text-align: center;">
