--- a/SparkPlugins/iTunes/Resources/English.lproj/iTunesHelp.html
+++ b/SparkPlugins/iTunes/Resources/English.lproj/iTunesHelp.html
@@ -5,37 +5,53 @@
   <title>Spark iTunes Action Help</title>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
   <style type="text/css">
-  	@import "Help/help.css";
+    @import "Help/help.css";
   </style>
  </head>
  <body>
- 	<table style="margin: 20px; width: 95%" cellspacing="0" cellpadding="0">
- 		<tr>
- 			<td>
- 				<img src="Help/Icon.png" alt="" style="vertical-align: middle;" />
- 			</td>
- 			<td style="text-align: center; width: 90%">
- 				<h1>Spark iTunes<br />Action</h1>
- 			</td>
- 		</tr>
- 	</table>
- 	<hr />
- 	<div style="margin: 20px; margin-bottom: 32px;">
- 	<span class="chapter">What is an iTunes Action?</span>
- 			<p class="answer">An <strong>"iTunes Action"</strong> is a Spark Action made to command iTunes. You can create Actions that Launch or Quit iTunes, Actions that play/pause the current track, Actions to go to the Previous or the Next track, Volume up or down, and Actions that start/stop iTunes visual.</p></div>
- 	<div style="margin: 20px;">
- 	<span class="chapter">How to create an iTunes Action?</span>
- 		<div style="float: right; margin: 12px">
- 				<img src="Help/iTunes.jp2" alt="" style="margin: auto; border: 1px solid #c0c0c0" />
- 		</div>
- 			<p class="answer">Creating an iTunes Action is really simple, but those keys are my favorites. You just select the Action you want to execute on the Action Menu and that's all.</p>
- 			<br clear="all"/>
- 	</div>
- 	<a href="Help/Release.html" style="font-size: 11px">Release Notes</a>
- 	<hr />
-	<div class="copyright" style="margin-top: 20px; text-align: center">
-		Copyright © 2004 Shadow Lab.<br />
-		<a href="mailto:&#106;&#100;&#100;&#117;&#112;&#97;&#115;&#64;&#121;&#97;&#104;&#111;&#111;&#46;&#102;&#114;">Jean-Daniel Dupas</a><br />
-	</div>
+  <table style="margin: 20px; width: 95%" cellspacing="0" cellpadding="0">
+    <tr>
+      <td>
+        <img src="Help/Icon.png" alt="" style="vertical-align: middle;" />
+      </td>
+      <td style="text-align: center; width: 90%">
+        <h1>Spark iTunes<br />Action</h1>
+      </td>
+    </tr>
+  </table>
+  <ul id="hmenu">
+    <li>About iTunes Action…</li>
+    <li><a href="Help/howto.html">Create a iTunes Action</a></li>
+    <li><a href="Help/visual.html">Visual Settings</a></li>
+    <li><a href="Help/history.html">Release Notes</a></li>
+  </ul>
+  <div style="margin: 20px;">
+    <span class="chapter">What is an iTunes Action?</span>
+    <p class="answer" >A <strong>"System Action"</strong> allows you to execute the following actions:
+     <ul style="font-size: 13px">
+      <li>Launch iTunes (and start to play).</li>
+      <li>Quit iTunes.</li>
+      <li>--------</li>
+      <li>Play/Pause.</li>
+      <li>Previous Track.</li>
+      <li>Next Track.</li>
+      <li>Stop.</li>
+      <li>Show Track Info.</li>
+      <li>--------</li>
+      <li>Play Playlist…</li>
+      <li>Rate current track…</li>
+      <li>--------</li>
+      <li>Volume Down/Up.</li>
+      <li>--------</li>
+      <li>Start/Stop iTunes Visual.</li>
+      <li>Eject Audio CD.</li>
+     </ul>
+    </p>
+  </div>
+  <hr />
+  <div class="copyright" style="text-align: center;">
+    Copyright © 2004 - 2006, Shadow Lab.
+    <p style="margin-top: 4px"><a href="mailto:support@shadowlab.org">Starligth Team</a></p>
+  </div>
  </body>
 </html>
