Remove some French localizations. Update English nibs and strings (add space before ':', ...) Bump version. Update Key Trap with transparency layer. Update library windows (start/stop icon)

--- a/SparkPlugins/System/Resources/English.lproj/SystemActionHelp.html
+++ b/SparkPlugins/System/Resources/English.lproj/SystemActionHelp.html
@@ -37,8 +37,12 @@
       <li>--------</li>
       <li>Empty Trash</li>
       <li>--------</li>
+      <li>Mute</li>
+      <li>Volume Up</li>
+      <li>Volume Down</li>
+      <li>--------</li>
       <li>Switch grayscale.</li>
-      <li>Switch black/white.</li>
+      <li>Invert Black & White.</li>
       <li>--------</li>
       <li>Launch Screen Saver (Mac OS X.4 and later)</li>
      </ul>
