--- a/SparkPlugins/System/Resources/English.lproj/Help/history.html
+++ b/SparkPlugins/System/Resources/English.lproj/Help/history.html
@@ -30,9 +30,10 @@
      <li>Change name from "Power" to "System" Action.</li> 
      <li>Add «Screen Saver» (Mac OS X.4 and later).</li>
      <li>Improve Logout, Restart, Shutdown support.</li>
-     <li>Add «Switch to…».</li>
+     <li>Add «Switch to…» (Mac OS X.4 and later).</li>
      <li>Add «Empty trash».</li>
-     <li>Add «Switch Grayscale» and «Switch Black/White».</li>
+     <li>Add «Mute», «Volume Up» and «Volume Down».</li>
+     <li>Add «Switch Grayscale» and «Invert Black & White».</li>
      <li>Redesing UI for Spark 3.0</li>
     </ul>
   </div>
