Implements First version of Backup/Restore Library. Update Editor to support setLibrary: in LibraryDocument. Correct sync bug in iTunes Plugins (visual no always sync). Bump version.

--- a/SparkPlugins/System/Resources/English.lproj/Help/history.html
+++ b/SparkPlugins/System/Resources/English.lproj/Help/history.html
@@ -30,7 +30,7 @@
      <li>Change name from "Power" to "System" Action.</li> 
      <li>Add «Screen Saver» (Mac OS X.4 and later).</li>
      <li>Improve Logout, Restart, Shutdown support.</li>
-     <li>Add «Switch to…» (Mac OS X.4 and later).</li>
+     <li>Add «Switch to…».</li>
      <li>Add «Empty trash».</li>
      <li>Add «Mute», «Volume Up» and «Volume Down».</li>
      <li>Add «Switch Grayscale» and «Invert Black & White».</li>
