--- a/SparkPlugins/System/Resources/English.lproj/SystemActionHelp.html
+++ b/SparkPlugins/System/Resources/English.lproj/SystemActionHelp.html
@@ -29,7 +29,7 @@
     <p class="answer" >A <strong>"System Action"</strong> allows you to execute the following actions:
      <ul style="font-size: 13px">
       <li>Log Out…</li>
-      <li>Switch to… (Mac OS X.4 and later)</li>
+      <li>Switch to…</li>
       <li>--------</li>
       <li>Sleep</li>
       <li>Reboot</li>
