--- a/SparkPlugins/Text/Resources/English.lproj/Help/datetime.html
+++ b/SparkPlugins/Text/Resources/English.lproj/Help/datetime.html
@@ -31,7 +31,7 @@
   <table style="margin: 20px; width: 95%" cellspacing="0" cellpadding="0">
    <tr>
     <td>
-     <img src="Icon.png" alt="" style="vertical-align: middle;" />
+     <img src="icon.png" alt="" style="vertical-align: middle;" />
     </td>
     <td style="text-align: center; width: 90%">
      <h1>Spark Text/Keyboard<br />Action</h1>
@@ -39,14 +39,14 @@
    </tr>
   </table>
   <ul id="hmenu">
-   <li>About System Action…</li>
-   <li><a href="howto.html">Text Action</a></li>
-   <li><a href="datetime.html">Date/Time Action</a></li>
+   <li><a href="../TextActionHelp.html">About Text/Keyboard Action…</a></li>
+   <li><a href="text.html">Text Action</li>
+   <li>Date/Time Action</li>
    <li><a href="keystroke.html">Keystroke Action</a></li>
    <li><a href="history.html">Release Notes</a></li>
   </ul>
   <div style="margin: 20px;">
-  <span class="chapter">How to create a System Action?</span>
+  <span class="chapter">Date/Time Action</span>
   <p class="text">Date/Time format syntax:</p>
   <p class="answer">
  The date/time format is specified by means of a string time pattern. In this
@@ -291,7 +291,7 @@
   </div>
   <hr />
  <div class="copyright" style="text-align: center;">
-  Copyright © 2004 - 2007, Shadow Lab.
+  Copyright © 2007, Shadow Lab.
   <p style="margin-top: 4px">
   <a href="mailto:support@shadowlab.org">Starligth Team</a>
   </p>
