--- a/SparkPlugins/Text/Resources/English.lproj/Help/history.html
+++ b/SparkPlugins/Text/Resources/English.lproj/Help/history.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
  <head>
-  <title>Release Notes System Plugin</title>
+  <title>Release Notes Text/Keyboard Plugin</title>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
   <style type="text/css">
    @import "help.css";
@@ -15,50 +15,26 @@
      <img src="Icon.png" alt="" style="vertical-align: middle;" />
     </td>
     <td style="text-align: center; width: 90%">
-     <h1>Spark System<br />Action<br /></h1>
+     <h1>Spark Text/Keyboard<br />Action<br /></h1>
     </td>
    </tr>
   </table>
   <ul id="hmenu">
-  	<li><a href="../SystemActionHelp.html">About System Action…</a></li>
-  	<li><a href="howto.html">Create a System Action</a></li>
-  	<li>Release Notes</li>
+   <li><a href="../TextActionHelp.html">About Text/Keyboard Action…</a></li>
+   <li><a href="text.html">Text Action</a></li>
+   <li><a href="datetime.html">Date/Time Action</a></li>
+   <li><a href="keystroke.html">Keystroke Action</a></li>
+   <li>Release Notes</li>
   </ul>
-  <div style="margin: 20px; ">
-  <span class="chapter">Version 3.0</span>
-    <ul class="answer">
-     <li>Change name from "Power" to "System" Action.</li> 
-     <li>Add «Screen Saver» (Mac OS X.4 and later).</li>
-     <li>Improve Logout, Restart, Shutdown support.</li>
-     <li>Add «Switch to…».</li>
-     <li>Add «Empty trash».</li>
-     <li>Add «Mute», «Volume Up» and «Volume Down».</li>
-     <li>Add «Switch Grayscale» and «Invert Black & White».</li>
-     <li>Redesing UI for Spark 3.0</li>
-    </ul>
-  </div>
-  <div style="margin: 20px; margin-bottom: 32px;">
-  <span class="chapter">Version 2.0</span>
-    <ul class="answer">
-     <li>Add «Fast Logout» action.</li> 
-     <li>Update for SparkKit 2.0.</li>
-    </ul>
-  </div>
-  <div style="margin: 20px; margin-bottom: 32px;">
-  <span class="chapter">Version 1.0.1</span>
-    <ul class="answer">
-     <li>Update for SparkKit 1.1.</li>
-    </ul>
-  </div>
   <div style="margin: 20px; margin-bottom: 32px;">
   <span class="chapter">Version 1.0</span>
     <ul class="answer">
      <li>First release.</li>
     </ul>
   </div>
-   <hr />
+  <hr />
  <div class="copyright" style="text-align: center;">
-  Copyright © 2004 - 2006, Shadow Lab.
+  Copyright © 2007, Shadow Lab.
   <p style="margin-top: 4px">
   <a href="mailto:support@shadowlab.org">Starligth Team</a>
   </p>
