--- a/SparkPlugins/Text/Resources/English.lproj/Help/text.html
+++ b/SparkPlugins/Text/Resources/English.lproj/Help/text.html
@@ -5,7 +5,7 @@
   <title>Spark Text/Keyboard Action Help</title>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
   <style type="text/css">
-   @import "Help/help.css";
+   @import "help.css";
   </style>
  </head>
  <body>
@@ -20,19 +20,19 @@
    </tr>
   </table>
   <ul id="hmenu">
-   <li>About Text/Keyboard Action…</li>
-   <li><a href="Help/text.html">Text Action</a></li>
-   <li><a href="Help/datetime.html">Date/Time Action</a></li>
-   <li><a href="Help/keystroke.html">Keystroke Action</a></li>
-   <li><a href="Help/history.html">Release Notes</a></li>
+   <li><a href="../TextActionHelp.html">About Text/Keyboard Action…</a></li>
+   <li>Text Action</li>
+   <li><a href="datetime.html">Date/Time Action</a></li>
+   <li><a href="keystroke.html">Keystroke Action</a></li>
+   <li><a href="history.html">Release Notes</a></li>
   </ul>
   <div style="margin: 20px;">
-  <span class="chapter">What is a Text/Keyboard Action?</span>
-    <p class="answer" >A <strong>"Text/Keyboard Action"</strong> allows you to simulate keyboard events.</p>
+  <span class="chapter">Text Action</span>
+    <p class="answer" >A <strong>Text Action</strong> allows you to execute the simulate keyboard event.</p>
   </div>
   <hr />
  <div class="copyright" style="text-align: center;">
-  Copyright © 2004 - 2007, Shadow Lab.
+  Copyright © 2007, Shadow Lab.
   <p style="margin-top: 4px">
   <a href="mailto:support@shadowlab.org">Starligth Team</a>
   </p>
