--- a/SparkPlugins/Text/Resources/English.lproj/Help/keystroke.html
+++ b/SparkPlugins/Text/Resources/English.lproj/Help/keystroke.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
  <head>
-  <title>Spark System Action Help</title>
+  <title>Spark Text/Keyboard Action Help</title>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
   <style type="text/css">
    @import "help.css";
@@ -12,28 +12,27 @@
   <table style="margin: 20px; width: 95%" cellspacing="0" cellpadding="0">
    <tr>
     <td>
-     <img src="Icon.png" alt="" style="vertical-align: middle;" />
+     <img src="Help/Icon.png" alt="" style="vertical-align: middle;" />
     </td>
     <td style="text-align: center; width: 90%">
-     <h1>Spark System<br />Action</h1>
+     <h1>Spark Text/Keyboard<br />Action</h1>
     </td>
    </tr>
   </table>
   <ul id="hmenu">
-  	<li><a href="../SystemActionHelp.html">About System Action…</a></li>
-  	<li>Create a System Action</li>
-  	<li><a href="history.html">Release Notes</a></li>
+   <li><a href="../TextActionHelp.html">About Text/Keyboard Action…</a></li>
+   <li><a href="text.html">Text Action</a></li>
+   <li><a href="datetime.html">Date/Time Action</a></li>
+   <li>Keystroke Action</li>
+   <li><a href="history.html">Release Notes</a></li>
   </ul>
   <div style="margin: 20px;">
-  <span class="chapter">How to create a System Action?</span>
-    <p class="answer">To create a «System Action» you just have to select the action you want to execute in the Action Menu.</p>
-    <div style="margin: 12px; text-align: center">
-     <img src="Screenshot.png" alt="" style="margin: auto; border: 1px solid #c0c0c0" />
-    </div>
+  <span class="chapter">Keystroke Action</span>
+    <p class="answer" >A <strong>Keystroke Action</strong> allows you to execute the simulate keyboard event.</p>
   </div>
   <hr />
  <div class="copyright" style="text-align: center;">
-  Copyright © 2004 - 2006, Shadow Lab.
+  Copyright © 2007, Shadow Lab.
   <p style="margin-top: 4px">
   <a href="mailto:support@shadowlab.org">Starligth Team</a>
   </p>
