Fix HTML export

--- a/Spark/Resources/SEExportShortcut.html
+++ b/Spark/Resources/SEExportShortcut.html
@@ -1,6 +1,5 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="fr" lang="fr">
+<!DOCTYPE html>
+<html>
  <head>
   <title>@title!</title>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
@@ -24,9 +23,9 @@
  </head>
  <body>
  <h1>@title!</h1>
- <!-- @Start:application! -->
+ <!-- @Start:shortcut! -->
  <dl>
-  <dt class="application">@icon!<span class="name">@name!</span></dt>
+  <dt class="shortcut"><span class="description">@description!</span></dt>
   <dd>
   <!-- @Start:category! -->
    <h2>@icon!<span class="name">@name!</span></h2>
